--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section><h2> About me </h2></section>
         <p>
-            I am an enthusiestic developer and just graduated from the  university of the Witwatersrand Johannesburg.I'm very well experienced in building website for big cooperate companies.I have a prototype website that is cartered for civil engineers to upload their projects for portfolio purposes.
+            I  Motlatsi Daniel Mosoatsi  i have been in the developing community  fore over 3 years .I am an enthusiestic developer and just graduated from the  university of the Witwatersrand Johannesburg.I'm very well experienced in building website for big cooperate companies.I have a prototype website that is cartered for civil engineers to upload their projects for portfolio purposes.
 
         </p>
     </main>
@@ -36,7 +36,7 @@
             The  project I'm currently building a software  mainly focused on linking all Applied Mathematicians to consult with each other when solving real life problems. 
         </p>
     </article>
-    <footer>© 2026 2819120   Built with Semantic HTML   </footer>
+    <footer>© 2026 2819120   Built with Semantic HTML.  </footer>
     
 
 
