--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section><h2> About me </h2></section>
         <p>
-            I  Motlatsi Daniel Mosoatsi  i have been in the developing community  fore over 3 years .I am an enthusiestic developer and just graduated from the  university of the Witwatersrand Johannesburg.I'm very well experienced in building website for big cooperate companies.I have a prototype website that is cartered for civil engineers to upload their projects for portfolio purposes.
+            I  Motlatsi Daniel Mosoatsi, i have been in the developing community  fore over 3 years .I am an enthusiestic developer and just graduated from the  university of the Witwatersrand Johannesburg.I'm very well experienced in building website for big cooperate companies.I have a prototype website that is cartered for civil engineers to upload their projects for portfolio purposes.
 
         </p>
     </main>
